--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Deadline Job Scheduler</title>
+  <title>Deadline Job Scheduling</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -96,7 +96,7 @@
   </style>
 </head>
 <body>
-  <h1>Deadline Job Scheduler</h1>
+  <h1>Job Scheduling with Deadlines</h1>
 
   <div class="job-entry">
     <h3>Add Job</h3>
